<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/timeLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hourText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/hour"
                android:textStyle="bold"
                android:textColor="#ffffffff" />

            <TextView
                android:id="@+id/minText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/min"
                android:textStyle="bold"
                android:textColor="#ffffffff" />

            <TextView
                android:id="@+id/secText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sec"
                android:textStyle="bold"
                android:textColor="#ffffff"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hourInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:gravity="center"
                android:text="@string/zerozero"
                android:textColor="#ffffffff"
                android:textSize="80sp"
                android:clickable="true"/>

            <TextView
                android:id="@+id/colon1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/colon"
                android:textColor="#ffffffff"
                android:textSize="80sp"/>

            <TextView
                android:id="@+id/minInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:gravity="center"
                android:text="@string/zerozero"
                android:textColor="#ffffffff"
                android:textSize="80sp"
                android:clickable="true"/>

            <TextView
                android:id="@+id/colon2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/colon"
                android:textColor="#ffffffff"
                android:textSize="80sp"/>

            <TextView
                android:id="@+id/secInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:gravity="center"
                android:text="@string/zerozero"
                android:textColor="#ffffffff"
                android:textSize="80sp"
                android:clickable="true"/>

        </LinearLayout>

    </LinearLayout>

    <GridLayout
        android:id="@+id/keyboardLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:rowCount="4"
        android:columnCount="3">

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/one"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/two"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/three"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/four"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/five"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/six"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/seven"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/eight"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/nine"
            android:textSize="30sp"/>

        <ImageButton
            android:id="@+id/backspaceButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:background="@drawable/backspace_icon"
            android:backgroundTint="#ffffffff"/>

        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/zero"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/nextButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/next"
            android:textSize="30sp"
            android:backgroundTint="#33000000"/>

    </GridLayout>

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="#aa00aa00"
        android:text="@string/start"
        android:textColor="#ffffffff"/>

    <LinearLayout
        android:id="@+id/controlButtons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/pauseButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#aacc0000"
            android:text="@string/pause"
            android:textColor="#ffffffff"/>

        <Button
            android:id="@+id/continueButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#aa00aa00"
            android:text="@string/contin"
            android:textColor="#ffffffff"
            android:visibility="gone"/>

        <Button
            android:id="@+id/initButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#ff00a0a0"
            android:text="@string/init"
            android:textColor="#ffffffff"/>

    </LinearLayout>
</LinearLayout>
